# Brightness-Increase

./: .gitignore  README.md
BrightnessIncrease/: CMakeLists.txt  main.cpp
BrightnessIncrease/Source/: BrightnessFilter.cpp  BrightnessFilter.h  IImageFilter.h  IImageLoader.h  IImageSaver.h  ImageData.h  Pixel.h  Properties.h  QtImageLoader.cpp  QtImageLoader.h  QtImageSaver.cpp  QtImageSaver.h
